--- a/client/src/pages/landing-page/LandingPage.css
+++ b/client/src/pages/landing-page/LandingPage.css
@@ -1,7 +1,5 @@
 .landing {
   text-align: center;
-  display: flex;
-  flex-direction: column;
 }
 
 .landing section {
